--- a/package.json
+++ b/package.json
@@ -5,18 +5,24 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index"
+    "start": "nodemon index",
+    "serve": "node index"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.0.1",
     "apollo-server": "^3.1.2",
     "bcryptjs": "^2.4.3",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "graphql": "^15.5.1",
+    "graphql-subscriptions": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.5"
+    "mongoose": "^5.13.5",
+    "subscriptions-transport-ws": "^0.9.19"
   },
   "devDependencies": {
     "nodemon": "^2.0.12"
