--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index",
+    "start": "nodemon index.js",
     "serve": "node index"
   },
   "keywords": [],
@@ -14,10 +14,13 @@
   "dependencies": {
     "@graphql-tools/schema": "^8.0.1",
     "apollo-server": "^3.1.2",
+    "apollo-server-core": "^3.1.2",
+    "apollo-server-express": "^2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "express": "^4.17.1",
     "graphql": "^15.5.1",
     "graphql-subscriptions": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
