--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,3 @@
-URL=http://localhost:5000/graphql
+URL=wss://social-app-docker-server.herokuapp.com/graphql
+
+heroku config:add URL='https://social-app-docker-server.herokuapp.com/graphql' -a social-app-docker-client
